[tool.poetry]
name = "vpnmauth"
version = "0.2.7"
description = ""
authors = ["Анатолий Никифоров <nikiforova693@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"
pylint = "^2.8.2"
mypy = "^0.910"
types-requests = "^2.27.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
